--- a/src/style.css
+++ b/src/style.css
@@ -42,7 +42,7 @@
 		background-size: cover;
 		background-color: rgba(0, 0, 0, 0.3);
 		background-blend-mode: multiply;
-		z-index: -1;
+		/* z-index: -1; */
     }
 
 	.active-tabs{
