--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,7 @@
 
 @layer base{
 	html {
-		font-family: "Raleway", system-ui, san-serif;
+		font-family: "Montserrat", system-ui, san-serif;
 	}
 }
 
