--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
   /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif; */
-  font-family: Montserrat, sans-serif;
+  font-family: 'Plus Jakarta Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -32,7 +32,7 @@ body {
 
 @media screen and (max-width: 640px) {
   .body{
-    font-family: Raleway, sans-serif;
+    font-family: 'Plus Jakarta Sans', sans-serif;
   }
   
   .active{
