--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,7 @@
 
 @layer base{
 	html {
-		font-family: "Barlow Condensed", system-ui, san-serif;
+		font-family: "Plus Jakarta Sans", san-serif;
 	}
 }
 
