--- a/src/fonts.css
+++ b/src/fonts.css
@@ -14,11 +14,65 @@
     font-style: normal;
 }
 
-  /* @font-face {
+@font-face {
+    font-family: 'Plus Jakarta Sans';
+    src: url('./fonts/PlusJarkataSans/PlusJakartaSans-ExtraLight.woff2') format('woff2'),
+        url('./fonts/PlusJarkataSans/PlusJakartaSans-ExtraLight.woff') format('woff');
+    font-weight: 200;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Plus Jakarta Sans';
+    src: url('./fonts/PlusJarkataSans/PlusJakartaSans-ExtraBold.woff2') format('woff2'),
+        url('./fonts/PlusJarkataSans/PlusJakartaSans-ExtraBold.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Plus Jakarta Sans';
+    src: url('./fonts/PlusJarkataSans/PlusJakartaSans-Bold.woff2') format('woff2'),
+        url('./fonts/PlusJarkataSans/PlusJakartaSans-Bold.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Plus Jakarta Sans';
+    src: url('./fonts/PlusJarkataSans/PlusJakartaSans-Light.woff2') format('woff2'),
+        url('./fonts/PlusJarkataSans/PlusJakartaSans-Light.woff') format('woff');
+    font-weight: 300;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Plus Jakarta Sans';
+    src: url('./fonts/PlusJarkataSans/PlusJakartaSans-SemiBold.woff2') format('woff2'),
+        url('./fonts/PlusJarkataSans/PlusJakartaSans-SemiBold.woff') format('woff');
+    font-weight: 600;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
     font-family: 'Plus Jakarta Sans';
     src: url('./fonts/PlusJarkataSans/PlusJakartaSans-Regular.woff2') format('woff2'),
         url('./fonts/PlusJarkataSans/PlusJakartaSans-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
-} */
+}
+
+@font-face {
+    font-family: 'Plus Jakarta Sans';
+    src: url('./fonts/PlusJarkataSans/PlusJakartaSans-Medium.woff2') format('woff2'),
+        url('./fonts/PlusJarkataSans/PlusJakartaSans-Medium.woff') format('woff');
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+}
