--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,14 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import './fonts.css';
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 
-@layer base{
+
+/* @layer base{
 	html {
 		font-family: "Plus Jakarta Sans", san-serif;
 	}
-}
+} */
 
 
 @layer components{
