--- a/src/style.css
+++ b/src/style.css
@@ -24,19 +24,16 @@
 		z-index: -1;
     }
 
-	.pro{
+	/* .pro{
         background-image: url("./img/hero.jpg");
 		background-repeat: no-repeat;
 	    min-height: 1000px;
 		position: relative;
 		background-position: center;
 		background-size: cover;
-		/* background-attachment: fixed; */
-		/* background-color: rgba(0, 0, 0, 0.7);
-		background-blend-mode: multiply; */
-    }
+    } */
 
-	/* .pro{
+	.pro{
         background-image: url("./img/izzy3.jpg");
 		background-repeat: no-repeat;
 	    min-height: 800px;
@@ -45,7 +42,7 @@
 		background-size: cover;
 		background-color: rgba(0, 0, 0, 0.7);
 		background-blend-mode: multiply;
-    } */
+    }
 
 	.port{
         background-image: url("./img/port1.jpg"); 
@@ -89,7 +86,7 @@
 
 	@media screen and (max-width: 640px) {
 		.pro{
-			background-image: url("./img/hero.jpg");
+			background-image: url("./img/izzy3.jpg");
 			background-repeat: no-repeat;
 			min-height: 400px;
 			position: relative;
